--- a/src/components/SignUp.css
+++ b/src/components/SignUp.css
@@ -6,7 +6,14 @@ body,
 .form-container, 
 input, 
 select, 
+.form-container select,
+.form-container input,
+.select-container,
 button {
+    font-family: 'Inter', sans-serif !important;
+}
+
+select, option {
     font-family: 'Inter', sans-serif !important;
 }
 
