--- a/src/App.css
+++ b/src/App.css
@@ -179,12 +179,14 @@ h1 {
 /* ✅ 개별 제품 박스 */
 .top-product-box {
   width: 250px;
+  align-items: center;
   background-color: white;
   border: 1px solid #ddd;
   border-radius: 10px;
   padding: 15px;
   text-align: center;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  
 }
 
 /* ✅ 제품 이미지 스타일 */
