--- a/src/App.css
+++ b/src/App.css
@@ -122,8 +122,7 @@ h1 {
   font-weight: bold;
   color: black;
   text-shadow: none;
-  opacity: 0;
-  transition: opacity 0.3s ease;
+  opacity: 1;
 }
 
 /* 상품 가격 (왼쪽 상단 제목 아래 정렬) */
@@ -136,15 +135,14 @@ h1 {
   font-weight: bold;
   color: black;
   text-shadow: none;
-  opacity: 0;
-  transition: opacity 0.3s ease;
+  opacity: 1;
 }
 
-/* Hover 시 텍스트 표시 */
+/* Hover 시 텍스트 표시
 .product-box:hover h3, 
 .product-box:hover p {
   opacity: 1;
-}
+} */
 
 /* 구매 버튼 (이미지) */
 .buy-button {
